samples/_failures_safe/1761191732_cee8f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbe5012b.c: In function ‘main’:
./samples/SAFE/__tmp_cbe5012b.c:177:22: error: expected ‘)’ at end of input
  177 |     if (strlen(input)
      |        ~             ^
      |                      )
./samples/SAFE/__tmp_cbe5012b.c:177:5: error: expected declaration or statement at end of input
  177 |     if (strlen(input)
      |     ^~
